[package]
name = "dragon-curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.25.0"

[workspace]
members = [
    "dragon-curve-wasm",
    "run-wasm",
]
# so we can run dragon-curve-wasm with:
# cargo run-wasm --release --package dragon-curve-wasm
